# uve

./: README.md  UVEngine.sln  UVEngine.sln.DotSettings  清理项目.bat
BGM/: AudioPlayer.cs  BGM.csproj
LIB_ARM/: libjpeg-9.lib  libpng16.lib  smpeg.lib  zlib.lib
OggDecode/: OggDecode.csproj  OggSong.cs
SDL_image/: README.txt
SDL_mixer/: dynamic_ogg.c  music.c
SDL_ttf/: SDL_ttf.vcxproj  SDL_ttf.vcxproj.filters
UVEngine/: AboutPage.xaml  AboutPage.xaml.cs  App.xaml  App.xaml.cs  AppResLib.dll.0804.mui  Auth.cs  ExternalStorageHelper.cs  GameDetailPage.xaml  GameDetailPage.xaml.cs  GamePage.xaml  GamePage.xaml.cs  Import.xaml  Import.xaml.cs  LocalizedStrings.cs  MainPage.xaml  MainPage.xaml.cs  RPALManifest.xml  Saver.cs  UVEngine.csproj  UVEngine_2013_08_30_12_45_54.sap  app.config  packages.config
UVEngine.sln.ide/: edb.chk  storage.ide
UVEngine2_1/: App.xaml  App.xaml.cs  LocalizedStrings.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  UVEngine2_1.csproj
UVEngineNative/: AnimationInfo.cpp  AnimationInfo.h  BaseReader.h  BasicGameInfo.cpp  BasicGameInfo.h  BenchCPU.cpp  BenchCPU.h  BenchMem.cpp  BenchMem.h  ButtonLink.h  Direct3DBase.cpp  Direct3DBase.h  Direct3DContentProvider.cpp  Direct3DContentProvider.h  DirectReader.cpp  DirectReader.h  DirectXHelper.h  DirtyRect.cpp  FontInfo.cpp  Game.cpp  Game.h  GameInfoEx.cpp  GameInfoEx.h  ICallBack.h  IExternalStorageNative.cpp  IExternalStorageNative.h  INI.cpp  INI.h  (+90 more)
libz-1.1.4/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  adler32.c  compress.c  configure  configure.ac  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zutil.c  zutil.h
libz-1.1.4/msvc++/: Makefile.am  Makefile.in  libz.vcxproj  libz.vcxproj.filters
(+435 files in other folders)
